crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__type_constraints.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun <T> demo() where T : Any, /* orphan */ , T : Closeable {}

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    FunctionDeclaration
      ModifierListSequence
      ModifierListSequence
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      TypeParameterList
        Lt "<" @ 4..5
        TypeParameterSeparatedList
          TypeParameter
            ModifierListSequence
            Name
              Identifier "T" @ 5..6
        Gt ">" @ 6..7 trailing=[Whitespace " "]
      ModifierListSequence
      CallableName
        CallableNamePartList
          Name
            Identifier "demo" @ 8..12
      ValueParameterList
        LParen "(" @ 12..13
        ValueParameterSeparatedList
        RParen ")" @ 13..14 trailing=[Whitespace " "]
      TypeConstraintList
        Identifier "where" @ 15..20 trailing=[Whitespace " "]
        TypeConstraintSeparatedList
          TypeConstraint
            Name
              Identifier "T" @ 21..22 trailing=[Whitespace " "]
            Colon ":" @ 23..24 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "Any" @ 25..28
          Comma "," @ 28..29 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
          TypeConstraint
            Name
    Statement
      ExpressionStatement
        ErrorNode
          Comma "," @ 43..44 trailing=[Whitespace " "]
        ErrorNode
          Identifier "T" @ 45..46 trailing=[Whitespace " "]
        ErrorNode
          Colon ":" @ 47..48 trailing=[Whitespace " "]
        ErrorNode
          Identifier "Closeable" @ 49..58 trailing=[Whitespace " "]
        ErrorNode
          LBrace "{" @ 59..60
      TerminatorList
    RBrace "}" @ 60..61
  Eof "" @ 62..62 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=43..44 message="expected name"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=43..44 message="expected type constraint"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=43..44 message="expected expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=45..46 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=47..48 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=49..58 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=59..60 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=60..61 message="unexpected closing brace at top level"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(43), end: TextSize(44) }) message=expected name
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(43), end: TextSize(44) }) message=expected type constraint
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(43), end: TextSize(44) }) message=expected expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(45), end: TextSize(46) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(48) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(58) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(59), end: TextSize(60) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(60), end: TextSize(61) }) message=unexpected closing brace at top level
