crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__type_parameter_list.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Box<First, /* orphan */ , Second>

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Name
        Identifier "Box" @ 6..9
      TypeParameterList
        Lt "<" @ 9..10
        TypeParameterSeparatedList
          TypeParameter
            ModifierList
            Name
              Identifier "First" @ 10..15
          Comma "," @ 15..16 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
          BogusTypeParameter
          Comma "," @ 30..31 trailing=[Whitespace " "]
          TypeParameter
            ModifierList
            Name
              Identifier "Second" @ 32..38
        Gt ">" @ 38..39
  Eof "" @ 40..40 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=30..31 message="expected type parameter between commas"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(30), end: TextSize(31) }) message=expected type parameter between commas
