crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__unterminated_nested_comment.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
class UnterminatedNestedComment {
fun complete() { val value=1 }
}
/* outer unterminated
 * before nested /* nested closes */
 * outer remains open

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Name
        Identifier "UnterminatedNestedComment" @ 6..31 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 32..33
        ClassMemberList
          ClassMemberDeclaration
            FunctionDeclaration
              ModifierList
              ModifierList
              FunKw "fun" @ 34..37 leading=[Newline "\n"] trailing=[Whitespace " "]
              ModifierList
              Name
                Identifier "complete" @ 38..46
              ValueParameterList
                LParen "(" @ 46..47
                ValueParameterSeparatedList
                RParen ")" @ 47..48 trailing=[Whitespace " "]
              BlockBody
                Block
                  LBrace "{" @ 49..50 trailing=[Whitespace " "]
                  BlockItemList
                    PropertyDeclaration
                      ModifierList
                      ModifierList
                      ValKw "val" @ 51..54 trailing=[Whitespace " "]
                      Name
                        Identifier "value" @ 55..60
                      PropertyInitializer
                        Assign "=" @ 60..61
                        LiteralExpression
                          IntegerLiteral "1" @ 61..62 trailing=[Whitespace " "]
                      PropertyBodyMemberList
                  RBrace "}" @ 63..64
        RBrace "}" @ 65..66 leading=[Newline "\n"]
  Eof "" @ 148..148 leading=[Newline "\n", UnterminatedBlockComment "/* outer unterminated\n * before nested /* nested closes */\n * outer remains open\n"]

diagnostics:
  code=kotlin.lex.unterminated_block_comment severity=Error stage=Lexer range=67..148 message="unterminated block comment"

diagnostics:
code=kotlin.lex.unterminated_block_comment severity=Error stage=Lexer range=Some(TextRange { start: TextSize(67), end: TextSize(148) }) message=unterminated block comment
