crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__value_parameter_list.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo(first: String, /* orphan */ , second: Int) {}

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportList
    ImportDirectiveList
  KotlinFileItemList
    FunctionDeclaration
      ModifierListSequence
      ModifierListSequence
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierListSequence
      CallableName
        CallableNamePartList
          Name
            Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
          ValueParameter
            ModifierListSequence
            Name
              Identifier "first" @ 9..14
            Colon ":" @ 14..15 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "String" @ 16..22
          Comma "," @ 22..23 trailing=[Whitespace " ", BlockComment "/* orphan */", Whitespace " "]
          Comma "," @ 37..38 trailing=[Whitespace " "]
          ErrorNode
          ValueParameter
            ModifierListSequence
            Name
              Identifier "second" @ 39..45
            Colon ":" @ 45..46 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "Int" @ 47..50
        RParen ")" @ 50..51 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 52..53
        BlockItemList
        RBrace "}" @ 53..54
  Eof "" @ 55..55 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=39..45 message="expected value parameter between commas"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(39), end: TextSize(45) }) message=expected value parameter between commas
