crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__when_missing_close.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo(value: Int) { when (value) { 1 -> one()

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          Name
            Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "value" @ 9..14
            Colon ":" @ 14..15 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "Int" @ 16..19
        RParen ")" @ 19..20 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 21..22 trailing=[Whitespace " "]
        BlockItemList
          Statement
            ExpressionStatement
              WhenExpression
                WhenKw "when" @ 23..27 trailing=[Whitespace " "]
                WhenSubject
                  LParen "(" @ 28..29
                  NameExpression
                    Identifier "value" @ 29..34
                  RParen ")" @ 34..35 trailing=[Whitespace " "]
                LBrace "{" @ 36..37 trailing=[Whitespace " "]
                WhenEntryList
                  WhenEntry
                    WhenConditionSeparatedList
                      WhenCondition
                        LiteralExpression
                          IntegerLiteral "1" @ 38..39 trailing=[Whitespace " "]
                    Arrow "->" @ 40..42 trailing=[Whitespace " "]
                    CallExpression
                      NameExpression
                        Identifier "one" @ 43..46
                      TypeArgumentListList
                      ValueArgumentList
                        LParen "(" @ 46..47
                        ValueArgumentEntryList
                        RParen ")" @ 47..48
                      LambdaExpressionList
            TerminatorList
  Eof "" @ 49..49 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=49..49 message="expected '}' after when"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=49..49 message="expected '}' after block"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(49) }) message=expected '}' after when
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(49) }) message=expected '}' after block
